syntax = "proto3";

package user;
import "post.proto";

service UserService {
    rpc CreateUser(User) returns (User);
}




message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    repeated Post posts = 4;
}

